--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,16 @@
   box-sizing: border-box;
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
 html {
   height: 100%;
 }
@@ -19,6 +29,10 @@ body {
 }
 
 #app-div {
+  height: 100%;
+}
+
+#routes {
   height: 100%;
 }
 
@@ -49,7 +63,7 @@ nav a {
 }
 
 nav a:hover {
-  background-color: orange;
+  background-color: yellow;
   color: black;
 }
 
@@ -182,10 +196,52 @@ header h1 {
 
 .task-list h1 {
   margin: 0px;
-  padding-left: 10px;
-  padding-top: 10px;
+}
+
+.task-header {
+  margin: 0px;
+  padding: 10px;
+  padding-bottom: 0px;
   background-color: black;
   color: white;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-task-btn {
+  background-color: orange;
+  cursor: pointer;
+  font-size: 20px;
+  height: 30px;
+  width: 30px;
+  border-radius: 10px;
+  border: 0px;
+  outline: none;
+}
+
+.add-task-btn:hover {
+  background-color: yellow;
+}
+
+.form-overlay {
+  position: fixed;
+  background-color: rgba(0,0,0,0.8);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.form-overlay h1 {
+  color: white;
+}
+
+form {
+  background-color: white;
+  height: 400px;
+  width: 400px;
 }
