--- a/public/style.css
+++ b/public/style.css
@@ -187,7 +187,7 @@ header h1 {
 }
 
 #town-container {
-  flex-grow: 3;
+  width: 75%;
   height: 100%;
 }
 
@@ -195,6 +195,18 @@ header h1 {
   flex-grow: 1;
   background-color: lightgray;
   height: 100%;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+#town-buildings {
+  border: 1px solid black;
+  width: 350px;
+  height: 400px;
+  background-color: white;
 }
 
 #task-container {
